# bg-remover

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
scripts/: download_model.py
src/: bg_remover.py
src/bg_remover/: core.py  main.py
src/bg_remover/api/: routes.py  security.py
tests/: test_api.py  test_core.py
